# legal-rag-ai

./: .gitignore  README.md  main.py  pyproject.toml  vector.py
